# EchoSeal

./: Dockerfile  EchoSeal_algorithm_summary.txt  LICENSE  README.md  docker-compose.yml  noxfile.py  pyproject.toml  rx_app.py  tx_app.py
docs/: embedder_detector_alignment.md
gui/: rx_gui.py  tx_gui.py
rtwm/: __init__.py  audioio.py  check_test.py  comparison_debugger.py  crypto.py  detector.py  embedder.py  fastpolar.py  fastpolar_old.py  frame_aligment_check.py  frozen_bit_check.py  polar.py  polar_code_roundtrip.py  polar_fast.py  polar_readibility_check.py  reliability_polar_bits.py  rountrip_check.py  tx_rx_signal_comparison_debugger.py  utils.py  watermark_check.py
tests/: results.txt  roundtrip_check.py  test_aligh_frames.py  test_bypass.py  test_crypto.py  test_decoder2.py  test_decoder3.py  test_detector.py  test_edge_cases.py  test_embedder.py  test_embedder_detector_alignment.py  test_embedder_functionality.py  test_false_positive.py  test_filter.py  test_polar.py  test_roundtrip.py  test_roundtrip_quick.py  tx_rx_verification_test.py
